<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Quiz_Activity1"
    android:background="@drawable/btn_bg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/toolbar1"
        android:orientation="horizontal"
        android:background="@color/color2">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/back_icon1"
            android:src="@drawable/back_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar1"
        android:id="@+id/lLayout4"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMsg"
            android:layout_marginTop="30dp"
            android:textSize="38sp"
            android:textColor="@color/color3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/q_count1"
            android:textSize="36sp"
            android:textColor="@color/color3"
            android:alpha="0.7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/q1"
            android:textSize="19sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lLayout5"
        android:layout_below="@+id/lLayout4"
        android:padding="20dp">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op1"
                android:textSize="19sp"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op2"
                android:textSize="19sp"/>

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op3"
                android:textSize="19sp"/>

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op4"
                android:textSize="19sp"/>

        </RadioGroup>
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:id="@+id/lLayout6"
       android:layout_below="@+id/lLayout5"
       android:padding="20dp">

       <com.google.android.material.button.MaterialButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/lLayout5"
           android:id="@+id/nxt1"
           android:text="@string/nxt"
           android:layout_marginTop="5dp"
           android:backgroundTint="@color/color2"
           android:textSize="19sp"
           app:cornerRadius="15dp"/>


       <com.google.android.material.button.MaterialButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/quit1"
           android:layout_below="@id/nxt1"
           android:text="@string/quit"
           android:layout_marginTop="5dp"
           android:backgroundTint="@color/color3"
           android:textSize="19sp"
           app:cornerRadius="15dp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lLayout5"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="left"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:layout_weight="40"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewScore1"
            android:text="@string/count"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:layout_gravity="bottom"/>

    </LinearLayout>


</RelativeLayout>
