<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".About_activity"
    android:background="@drawable/btn_bg1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView21"
        android:text="@string/about"
        android:textStyle="bold"
        android:textSize="36dp"
        android:textColor="@color/color2"
        android:textAlignment="center"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout24"
        android:layout_below="@+id/textView21"
        android:padding="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView21"
            android:text="@string/about_des"
            android:textAlignment="center"
            android:textSize="22sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:layout_below="@+id/layout24"
        android:text="@string/developer"
        android:textStyle="bold"
        android:textSize="36dp"
        android:textColor="@color/color2"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView23"
        android:id="@+id/lLayout3"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="90dp"
                android:src="@drawable/twit_logo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sajitha Francis"
                    android:textSize="26sp"
                    android:layout_gravity="left"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sajitha@gmail.com"
                    android:layout_gravity="left"
                    android:textSize="22sp"
                    android:alpha="0.7"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@+id/lLayout3"
        android:layout_marginTop="100dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn2"
            android:text="BACK"
            android:textSize="20sp"
            android:backgroundTint="@color/color2"/>

    </LinearLayout>

</RelativeLayout>